--- a/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="H&#x1ec7; Th&#x1ed1;ng eBooks"/>
     <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
