--- a/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
@@ -3905,11 +3905,11 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter Medium" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="22 : 30"/>
+            <Property name="text" type="java.lang.String" value="22 : 30 CH"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="790" y="50" width="-1" height="-1"/>
+              <AbsoluteConstraints x="780" y="50" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
