--- a/DuAn01_G3_ebooks/src/com/ebooks/main/LogInDiaLog.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/LogInDiaLog.form
@@ -91,7 +91,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="com.ebooks.Compoment.MyButton" name="btnTaoTaiKhoan">
+        <Component class="com.ebooks.Compoment.MyButton" name="btnDangNhap">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="6e" green="be" red="57" type="rgb"/>
@@ -115,11 +115,11 @@
             <Property name="radius" type="int" value="10"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTaoTaiKhoanActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDangNhapActionPerformed"/>
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="490" y="400" width="160" height="40"/>
+              <AbsoluteConstraints x="490" y="390" width="160" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
