--- a/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
@@ -38,7 +38,7 @@
     <Container class="com.ebooks.Compoment.PanelBorder" name="pnlMainProjebt">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+          <Color blue="fb" green="fb" red="fb" type="rgb"/>
         </Property>
       </Properties>
 
@@ -292,7 +292,7 @@
             <Container class="com.ebooks.Compoment.PanelRadius" name="pnlFrameMain">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                  <Color blue="fb" green="fb" red="fb" type="rgb"/>
                 </Property>
                 <Property name="radius" type="int" value="15"/>
               </Properties>
